@@ -66,244 +66,5 @@
 	  	</exclusion>
 	  </exclusions>
 	</dependency>
-	<dependency>
-		<groupId>org.scala-lang</groupId>
-		<artifactId>scala-library</artifactId>
-		<version>${scala.version}</version>
-	</dependency>    
-	<dependency>
-		<groupId>org.scala-lang</groupId>
-		<artifactId>scala-compiler</artifactId>
-		<version>${scala.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>edu.berkeley.cs.amplab</groupId>
-		<artifactId>shark-assembly_${scala.version}</artifactId>
-		<version>${shark.version}</version>
-          <exclusions>
-		  	<exclusion>
-		  		<groupId>org.eclipse.jetty</groupId>
-		  		<artifactId>*</artifactId>
-		  	</exclusion>	
-		    <exclusion>
-		      <groupId>org.slf4j</groupId>
-		      <artifactId>slf4j-api</artifactId>
-		    </exclusion>		  		  		  	
-		  </exclusions>			
-	</dependency>
-	<dependency>
-		<groupId>org.apache.spark</groupId>
-		<artifactId>spark-core_${scala.version}</artifactId>
-		<version>${spark.version}</version>
-		  <exclusions>
-		  	<exclusion>
-		  		<groupId>org.mortbay.jetty</groupId>
-		  		<artifactId>*</artifactId>
-		  	</exclusion>	
-		  	<exclusion>
-		  		<groupId>org.eclipse.jetty</groupId>
-		  		<artifactId>*</artifactId>
-		  	</exclusion>
-		  	
-		    <exclusion>
-		      <groupId>org.slf4j</groupId>
-		      <artifactId>slf4j-api</artifactId>
-		    </exclusion>
-		  </exclusions>			
-	</dependency>
-	<dependency>
-		<groupId>com.google.code.findbugs</groupId>
-		<artifactId>jsr305</artifactId>
-		<version>2.0.1</version>
-	</dependency>
-            
   </dependencies>
-
-  <build>
-	<!-- pluginManagement>
-	<plugins>
-	    <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.7</version>
-        </plugin>
-        <plugin>
-          <groupId>net.alchim31.maven</groupId>
-          <artifactId>scala-maven-plugin</artifactId>
-          <version>3.1.5</version>
-          <executions>
-            <execution>
-              <id>scala-compile-first</id>
-              <phase>process-resources</phase>
-              <goals>
-                <goal>compile</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>scala-test-compile-first</id>
-              <phase>process-test-resources</phase>
-              <goals>
-                <goal>testCompile</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>attach-scaladocs</id>
-              <phase>verify</phase>
-              <goals>
-                <goal>doc-jar</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <scalaVersion>${scala.version}</scalaVersion>
-            <recompileMode>incremental</recompileMode>
-            <useZincServer>true</useZincServer>
-            <args>
-              <arg>-unchecked</arg>
-              <arg>-optimise</arg>
-              <arg>-deprecation</arg>
-            </args>
-            <jvmArgs>
-              <jvmArg>-Xms64m</jvmArg>
-              <jvmArg>-Xms1024m</jvmArg>
-              <jvmArg>-Xmx1024m</jvmArg>
-              <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
-              <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
-            </jvmArgs>
-            <javacArgs>
-              <javacArg>-source</javacArg>
-              <javacArg>${java.version}</javacArg>
-              <javacArg>-target</javacArg>
-              <javacArg>${java.version}</javacArg>
-            </javacArgs>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.5.1</version>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-            <encoding>UTF-8</encoding>
-            <maxmem>1024m</maxmem>
-          </configuration>
-        </plugin>                  
-	</plugins>
-	</pluginManagement -->
-	
-    <defaultGoal>install</defaultGoal>
-
-    <plugins>
-      <plugin>
-		<groupId>org.scala-tools</groupId>
-		<artifactId>maven-scala-plugin</artifactId>
-		<executions>
-			<execution>
-				<id>compile</id>
-				<goals>
-					<goal>compile</goal>
-				</goals>
-				<phase>compile</phase>
-			</execution>
-			<execution>
-				<id>test-compile</id>
-				<goals>
-					<goal>testCompile</goal>
-				</goals>
-				<phase>test-compile</phase>
-			</execution>
-            <execution>
-               <phase>process-resources</phase>
-               <goals>
-                 <goal>compile</goal>
-               </goals>
-            </execution>
-		</executions>
-	  </plugin>
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <executions>
-          <execution>
-           <id>add-scala-sources</id>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>src/main/scala</source>
-              </sources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add-scala-test-sources</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>src/test/scala</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-      </plugin>      
-      	  
-      <!-- plugin>
-        <groupId>org.antlr</groupId>
-        <artifactId>antlr3-maven-plugin</artifactId>
-        <version>3.4</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>antlr</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin -->
-      
-	   <plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-eclipse-plugin</artifactId>
-	    <version>2.8</version>
-	    <configuration>
-	      <downloadSources>true</downloadSources>
-	      <downloadJavadocs>true</downloadJavadocs>
-	      <projectnatures>
-	        <projectnature>org.scala-ide.sdt.core.scalanature</projectnature>
-	        <projectnature>org.eclipse.jdt.core.javanature</projectnature>
-	      </projectnatures>
-	      <buildcommands>
-	        <buildcommand>org.scala-ide.sdt.core.scalabuilder</buildcommand>
-	      </buildcommands>
-	      <classpathContainers>
-	        <classpathContainer>org.scala-ide.sdt.launching.SCALA_CONTAINER"</classpathContainer>
-	        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-	      </classpathContainers>
-	      <excludes>
-	        <exclude>asm:asm:3.1</exclude>
-	        <!-- exclude>org.scala-lang:scala-library</exclude -->
-	        <!-- exclude>org.scala-lang:scala-compiler</exclude -->
-	      </excludes>
-	      <sourceIncludes>
-	        <sourceInclude>**/*.scala</sourceInclude>
-	        <sourceInclude>**/*.java</sourceInclude>
-	      </sourceIncludes>
-	    </configuration>
-	    </plugin>
-    </plugins>
-  </build> 
-   
 </project>
